<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Empesar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="760dp"
        android:foreground="@drawable/pantalla"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="220dp"
        android:background="@drawable/btn_ingresar"
        android:text="@string/btnMultiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNumeroUno"
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:layout_marginStart="50dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/primerNumero"
        android:inputType="number"
        android:background="@drawable/texto_editor"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

    <EditText
        android:id="@+id/txtNumeroDos"
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/segundoNumero"
        android:background="@drawable/texto_editor"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="50dp"
        android:text="INGRESE LOS NUMEROS"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="50dp"
        android:text="EL RESULTADO SE REFLEJARA EN LA SIGUIENTE PANTALLA."
        android:textColor="#FFFFFF"
        android:textSize="13.5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDivi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="565dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/btn_ingresar"
        android:text="@string/btnDividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="220dp"
        android:background="@drawable/btn_ingresar"
        android:text="@string/btnSumar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/btn_ingresar"
        android:text="@string/btnRestar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>